[tool.poetry]
name = "6-pyclass"
version = "0.1.0"
description = ""
authors = ["ferruccio_ribeiro <ferruccioribeiro@outlook.com>"]
readme = "README.md"
packages = [{include = "6"}]

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.13.2"
taskipy = "^1.14.1"
flake8 = "^7.1.1"
black = "^24.10.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""
